# infra-roadmap-2026

./: .gitignore  README.md  RESOURCES.md
M1-transformer-fundamentals/: README.md  resources.md  weekly-tracker.md
M1-transformer-fundamentals/mini-llama/: .gitignore  README.md  pyproject.toml  requirements.txt
M1-transformer-fundamentals/mini-llama/mini_llama/: model.py
M1-transformer-fundamentals/mini-llama/mini_llama/attention/: gqa.py  mha.py  mla.py  mqa.py  single_head.py
M1-transformer-fundamentals/mini-llama/mini_llama/norm/: rms_norm.py
M1-transformer-fundamentals/mini-llama/mini_llama/positional/: rope.py
M1-transformer-fundamentals/mini-llama/scripts/: compare_kv_cache.py  train_tinyshake.py
M1-transformer-fundamentals/mini-llama/tests/: test_w1_single_head.py  test_w2_attention_variants.py  test_w3_mla_rope.py  test_w4_full_model.py
M2-cuda-triton/: README.md  resources.md  weekly-tracker.md
M2-cuda-triton/cuda-pmpp/: README.md
M2-cuda-triton/triton-flashattn/: .gitignore  README.md  requirements.txt
M3-vllm-deepdive/: README.md  resources.md  weekly-tracker.md
M3-vllm-deepdive/blog-drafts/: 01-vllm-request-lifecycle.md  02-paged-attention-block-table.md  03-vllm-v1-vs-v0.md
M3-vllm-deepdive/experiments/: bench_vllm_throughput_latency.py
M3-vllm-deepdive/pr-tracker/: README.md  _template.md
M4-inference-frameworks/: README.md  resources.md  weekly-tracker.md
M5-parallelism-architectures/: README.md  resources.md  weekly-tracker.md
M6-rl-multimodal-interview/: README.md  resources.md  weekly-tracker.md
(+61 files in other folders)
